--- a/One Shot Learning/myHappy House.ipynb
+++ b/One Shot Learning/myHappy House.ipynb
@@ -32,6 +32,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "from pymongo import MongoClient\r\n",
+    "\r\n",
+    "conection_string =\"mongodb+srv://Kalindu:LM5yJx95m9EqsQDg@freecluster.gqsr9.mongodb.net/myFirstDatabase?retryWrites=true&w=majority\"\r\n",
+    "\r\n",
+    "client = MongoClient(conection_string)\r\n",
+    "db = client.get_database('face_recog_app')\r\n",
+    "records = db.ImagesEmbedding"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "source": [
     "FRmodel = faceRecoModel(input_shape=(3, 96, 96))"
@@ -73,7 +88,7 @@
     "    basic_loss = pos_dist- neg_dist + alpha\r\n",
     "    # Step 4: Take the maximum of basic_loss and 0.0. Sum over the training examples.\r\n",
     "    loss = tf.reduce_sum(tf.maximum(basic_loss, 0.0))\r\n",
-    "    ### END CODE HERE ###\r\n",
+    "   \r\n",
     "    \r\n",
     "    return loss"
    ],
@@ -138,142 +153,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "## Face Verification"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "source": [
-    "def verify(image_path, identity, database, model):\r\n",
-    "       \r\n",
-    "    # Step 1: Compute the encoding for the image. Use img_to_encoding() see example above. (≈ 1 line)\r\n",
-    "    encoding = img_path_to_encoding(image_path, model)\r\n",
-    "    \r\n",
-    "    # Step 2: Compute distance with identity's image (≈ 1 line)\r\n",
-    "    dist = np.linalg.norm(encoding - database[identity])\r\n",
-    "    \r\n",
-    "    # Step 3: Open the door if dist < 0.7, else don't open (≈ 3 lines)\r\n",
-    "    if dist < 0.7:\r\n",
-    "        print(\"It's \" + str(identity) + \", welcome home!\")\r\n",
-    "        door_open = True\r\n",
-    "    else:\r\n",
-    "        print(\"It's not \" + str(identity) + \", please go away\")\r\n",
-    "        door_open = False    \r\n",
-    "    \r\n",
-    "        \r\n",
-    "    return dist, door_open"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "## Face Recognition"
-   ],
-   "metadata": {
-    "tags": []
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "source": [
-    "def who_is_it(image_path, database, model):\r\n",
-    "     \r\n",
-    "      \r\n",
-    "    ## Step 1: Compute the target \"encoding\" for the image. Use img_to_encoding() see example above. ## (≈ 1 line)\r\n",
-    "    encoding = img_path_to_encoding(image_path, model)\r\n",
-    "    \r\n",
-    "    ## Step 2: Find the closest encoding ##\r\n",
-    "    \r\n",
-    "    # Initialize \"min_dist\" to a large value, say 100 (≈1 line)\r\n",
-    "    min_dist = 100\r\n",
-    "    \r\n",
-    "    # Loop over the database dictionary's names and encodings.\r\n",
-    "    for (name, db_enc) in database.items():\r\n",
-    "        \r\n",
-    "        # Compute L2 distance between the target \"encoding\" and the current \"emb\" from the database. (≈ 1 line)\r\n",
-    "        dist = np.linalg.norm(encoding-db_enc)\r\n",
-    "\r\n",
-    "        # If this distance is less than the min_dist, then set min_dist to dist, and identity to name. (≈ 3 lines)\r\n",
-    "        if dist < min_dist:\r\n",
-    "            min_dist = dist\r\n",
-    "            identity = name  \r\n",
-    "    \r\n",
-    "    if min_dist > 0.7:\r\n",
-    "        print(\"Not in the database.\")\r\n",
-    "    else:\r\n",
-    "        print (\"it's \" + str(identity) + \", the distance is \" + str(min_dist))\r\n",
-    "        \r\n",
-    "    return min_dist, identity"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "\n",
-    "\n",
-    "## MongoDB Connection"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "source": [
-    "from pymongo import MongoClient\r\n",
-    "\r\n",
-    "conection_string =\"mongodb+srv://Kalindu:LM5yJx95m9EqsQDg@freecluster.gqsr9.mongodb.net/myFirstDatabase?retryWrites=true&w=majority\"\r\n",
-    "\r\n",
-    "\r\n",
-    "client = MongoClient(conection_string)\r\n",
-    "\r\n",
-    "db = client.get_database('face_recog_app')\r\n",
-    "\r\n",
-    "records = db.ImagesEmbedding\r\n",
-    "\r\n"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "source": [
-    "# def insert_one_user(user_encoding, label):\r\n",
-    "#     counter = records.count_documents({})\r\n",
-    "#     new_user ={\r\n",
-    "#         \"id\":counter+1,\r\n",
-    "#         \"name\":label,\r\n",
-    "#         \"embedding\":user_encoding.tolist()        \r\n",
-    "#         }\r\n",
-    "#     records.insert_one(new_user)"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
    "source": [
     "def insert_database(database):\r\n",
     "    for key, value in database.items():\r\n",
@@ -284,42 +163,14 @@
     "            \"embedding\":value.tolist()   \r\n",
     "        }            \r\n",
     "        records.insert_one(new_users)\r\n",
-    "        print(\"Database has been uploaded\")\r\n",
-    "        "
+    "        print(\"Database has been uploaded\")"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "source": [
-    "insert_database(database)"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Database has been uploaded\n",
-      "Database has been uploaded\n",
-      "Database has been uploaded\n",
-      "Database has been uploaded\n",
-      "Database has been uploaded\n",
-      "Database has been uploaded\n",
-      "Database has been uploaded\n",
-      "Database has been uploaded\n",
-      "Database has been uploaded\n",
-      "Database has been uploaded\n",
-      "Database has been uploaded\n"
-     ]
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "source": [
     "def refresh_database():\r\n",
     "    retrieved_database={}\r\n",
@@ -330,33 +181,7 @@
     "        name = tmpdatabase_list[i]['name']\r\n",
     "        arr = tmpdatabase_list[i]['embedding']\r\n",
     "        retrieved_database[name] = np.array(arr)\r\n",
-    "    return retrieved_database\r\n",
-    "   "
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "source": [
-    "retrieved_database={}\r\n",
-    "tmpdatabase_list = list(records.find())\r\n",
-    "no_of_ids=len(tmpdatabase_list)\r\n",
-    "\r\n",
-    "for i in range(no_of_ids):    \r\n",
-    "    name = tmpdatabase_list[i]['name']\r\n",
-    "    arr = tmpdatabase_list[i]['embedding']\r\n",
-    "    retrieved_database[name] = np.array(arr)"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "source": [
-    "retrieved = refresh_database()\r\n"
+    "    return retrieved_database"
    ],
    "outputs": [],
    "metadata": {}
@@ -364,129 +189,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "## Testing connection"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "source": [
-    "verify(\"test_image/camera_0.jpg\", \"younes\", retrieved, FRmodel)"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "It's younes, welcome home!\n"
-     ]
-    },
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "(0.6671397125481674, True)"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 21
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "source": [
-    "verify(\"test_image/camera_2.jpg\", \"kian\", retrieved, FRmodel)"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "It's not kian, please go away\n"
-     ]
-    },
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "(0.8586887991026054, False)"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 22
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "source": [
-    "who_is_it(\"test_image/ronaldo_1.jpg\", retrieved_database, FRmodel)"
-   ],
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "NameError",
-     "evalue": "name 'retrieved_database' is not defined",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_4544/680631162.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mwho_is_it\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"test_image/ronaldo_1.jpg\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mretrieved_database\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mFRmodel\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'retrieved_database' is not defined"
-     ]
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "source": [
-    "who_is_it(\"test_image/camera_1.jpg\", retrieved_database, FRmodel)"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "it's bertrand, the distance is 0.46807329711242784\n"
-     ]
-    },
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "(0.46807329711242784, 'bertrand')"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 24
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
    "source": [
     "def insert_new_user(img_path, label, model=FRmodel):\r\n",
     "    face_cascade = cv2.CascadeClassifier('haarcascade_frontalface_default.xml')\r\n",
@@ -512,8 +214,17 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Face Recognition"
+   ],
+   "metadata": {
+    "tags": []
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "source": [
     "def identify_user(img_path, model=FRmodel):\r\n",
     "    retrieved_data = refresh_database()\r\n",
@@ -533,10 +244,10 @@
     "    # Loop over the database dictionary's names and encodings.\r\n",
     "    for (name, db_enc) in retrieved_data.items():\r\n",
     "        \r\n",
-    "        # Compute L2 distance between the target \"encoding\" and the current \"emb\" from the database. (≈ 1 line)\r\n",
+    "        # Compute L2 distance between the target \"encoding\" and the current \"emb\" from the database.\r\n",
     "        dist = np.linalg.norm(encoding-db_enc)\r\n",
     "\r\n",
-    "        # If this distance is less than the min_dist, then set min_dist to dist, and identity to name. (≈ 3 lines)\r\n",
+    "        # If this distance is less than the min_dist, then set min_dist to dist, and identity to name.\r\n",
     "        if dist < min_dist:\r\n",
     "            min_dist = dist\r\n",
     "            identity = name  \r\n",
@@ -549,105 +260,6 @@
     "    return min_dist, identity\r\n",
     "    "
    ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "source": [
-    "insert_new_user('./images/ronaldo.jpg', \"ronaldo\")"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "source": [
-    "identify_user('./test_image/ronaldo_1.jpg')"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "it's ronaldo2, the distance is 0.6964967455561287\n"
-     ]
-    },
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "(0.6964967455561287, 'ronaldo2')"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 14
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "source": [
-    "records.delete_many({})"
-   ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "<pymongo.results.DeleteResult at 0x1937c4f6c80>"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 15
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "source": [
-    "insert_new_user('./images/angelina.jpg', \"angelina\")"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "source": [
-    "identify_user('./test_image/test_angi.jpg')"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "it's angelina, the distance is 0.4269641357249416\n"
-     ]
-    },
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "(0.4269641357249416, 'angelina')"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 31
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
    "outputs": [],
    "metadata": {}
   }
