--- a/One Shot Learning/face_recognition_oneshot.ipynb
+++ b/One Shot Learning/face_recognition_oneshot.ipynb
@@ -36,7 +36,7 @@
    "source": [
     "from pymongo import MongoClient\r\n",
     "\r\n",
-    "conection_string =\"mongodb+srv://Kalindu:LM5yJx95m9EqsQDg@freecluster.gqsr9.mongodb.net/myFirstDatabase?retryWrites=true&w=majority\"\r\n",
+    "conection_string =\"mongodb+srv://<username>:<password>@freecluster.gqsr9.mongodb.net/myFirstDatabase?retryWrites=true&w=majority\"\r\n",
     "\r\n",
     "client = MongoClient(conection_string)\r\n",
     "db = client.get_database('face_recog_app')\r\n",
